[tool.poetry]
name = "cdn"
version = "0.1.0"
description = "For OppoHack"
authors = ["Andrew Tran <andrewtran312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
firebase-admin = "^5.3.0"
Flask = "^2.2.2"
Werkzeug = "^2.2.2"
requests = "^2.28.1"
ipinfo = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
